Created Event Page - Changed Navigation Links to events.html

--- a/about.html
+++ b/about.html
@@ -36,10 +36,10 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@services-active">
-              <a class="nav-link" href="services.html">Careers</a>
+              <a class="nav-link" href="events.html">Careers</a>
             </li>
             <li class="nav-item @@services-active">
-              <a class="nav-link" href="services.html">Events</a>
+              <a class="nav-link" href="events.html">Events</a>
             </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
               <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
@@ -180,7 +180,7 @@
                   <ul class="footer-gd-16">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Events</a></li>
+                    <li><a href="events.html">Events</a></li>
                     <li><a href="#url">Support</a></li>
                     <li><a href="#url">Purchase Token</a></li>
                   </ul>
