--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>BIVR - Boat Island</title>
+  <title>Contact Us - BIVR</title>
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -14,178 +14,61 @@
   <!-- web fonts -->
   <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 </head>
-
 <body>
-  <!--header-->
-  <div class="bnr">
-
-    <header id="site-header" class="fixed-top">
-      <div class="container">
-        <nav class="navbar navbar-expand-lg stroke">
-          <!-- <a class="navbar-brand" href="index.html">
+     <!--header-->
+  <header id="site-header" class="fixed-top">
+    <div class="container">
+      <nav class="navbar navbar-expand-lg stroke">
+        <!-- <a class="navbar-brand" href="index.html">
                 <span class="fa fa-handshake-o"></span> Masterwork
             </a> -->
 
-          <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
-            <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
-          </a>
-          <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
-            data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-            <span class="navbar-toggler-icon fa icon-close fa-times"></span>
-            </span>
-          </button>
+        <a class="navbar-brand" href="index.html">
+          <img src="assets/images/logo.png" alt="Your logo" title="bivr logo" style="height:35px;" />
+          <img src="assets/images/logo-txt.png" alt="Your logo" title="bivr logo" style="height:35px;" />
+        </a>
+        <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse"
+          data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
+          <span class="navbar-toggler-icon fa icon-close fa-times"></span>
+          </span>
+        </button>
 
-          <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item @@about-active">
-                <a class="nav-link" href="about.html">About</a>
-              </li>
-              <li class="nav-item @@services-active">
-                <a class="nav-link" href="events.html">Careers</a>
-              </li>
-              <li class="nav-item @@services-active">
-                <a class="nav-link" href="events.html">Events</a>
-              </li>
-              <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
-                <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
-              </li>
-              <li class="nav-item @@contact-active">
-                <a class="nav-link" href="support.html">Support</a>
-              </li>
-            </ul>
-          </div>
-        </nav>
-      </div>
-    </header>
-    <main>
-
-      <!--/header-->
-      <!-- index-block1 -->
-      <div class="w3l-index1">
-        <div class="content">
-          <div class="container">
-            <div class="row align-items-center">
-              <div class="col-lg-6 content-left">
-                <h3>WELCOME TO
-                </h3>
-                <h3 style="color: #ab07d4">BOAT ISLAND VR</h3>
-                <p class="mt-3 mb-lg-5 mb-4">A Multiplayer Virtual Reality (VR) <br>Sandbox.</p>
-                <a href="about.html" class="btn btn-outline-primary theme-button text-capitalize" style="border-radius: 40px; 
-          color: #fff; background: #ab07d4; border: none;">Get Started</a>
-              </div>
-              <div class="col-lg-6 content-photo mt-lg-0 mt-5">
-                <img src="assets/images/main.png" class="img-fluid" alt="main image">
-              </div>
-            </div>
-            <div class="clear"></div>
-          </div>
+        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item @@about-active">
+              <a class="nav-link" href="about.html">About</a>
+            </li>
+            <li class="nav-item @@services-active">
+              <a class="nav-link" href="events.html">Careers</a>
+            </li>
+            <li class="nav-item @@services-active active">
+              <a class="nav-link" href="events.html">Events</a>
+            </li>
+            <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
+              <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
+            </li>
+            <li class="nav-item @@contact-active">
+              <a class="nav-link" href="support.html">Support</a>
+            </li>
+          </ul>
         </div>
-      </div>
-      <!-- //index-block1 -->
-  </div>
-  <!-- index-block2 -->
-  <section class="w3l-index2 py-5">
-    <div class="container py-md-3">
-      <div class="header-section text-center mx-auto">
-        <h6 class="sub-title text-capitalize">Join the Wave</h6>
-        <img src="assets/images/gl12.png" class="img-fluid" alt="">
-        <p class="my-3"> Boat Island VR (BIVR), is a metaverse community for boats and islanders. The first multiplayer
-          virtual reality platform for creators.
-          We are building a meta and virtual space where islanders(fans) can visit, connect with eachother and enjoy
-          exclusive content and entertainment from different boats (creators) around the world.
-          Our platform is free for our boat island members, others can connect by purchasing a token for access. </p>
-      </div>
-      <!-- customers Section -->
-      <section class="w3l-customers pb-5">
-        <div class="container py-lg-3">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="owl-three owl-carousel owl-theme">
-                <div class="item">
-                  <img src="assets/images/s1.jpg" alt="paintball arena" class="img-fluid">
-                </div>
-                <div class="item">
-                  <img src="assets/images/s2.jpg" alt="boardgame room" class="img-fluid">
-
-                </div>
-                <div class="item">
-                  <img src="assets/images/s3.jpg" alt="game lobby" class="img-fluid">
-
-                </div>
-                <div class="item">
-                  <img src="assets/images/s4.jpg" alt="cruise boat" class="img-fluid">
-
-                </div>
-                <div class="item">
-                  <img src="assets/images/s5.jpg" alt="concert arena" class="img-fluid">
-
-                </div>
-                <div class="item">
-                  <img src="assets/images/s6.jpg" alt="club house" class="img-fluid">
-
-                </div>
-                <div class="item">
-                  <img src="assets/images/s7.jpg" alt="game menu" class="img-fluid">
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-      <!-- //customers Section -->
-  </section>
-  <!-- /index-block2 -->
-  <section class="w3l-about4" id="about">
-    <div class="new-block py-5">
-      <div class="container py-lg-5">
-        <div class="middle-section text-center">
-          <div class="header-section text-center mx-auto">
-            <h6 class="sub-title">Explore The Boat Island</h6>
-            <h3>Take a Tour Round the Island</h3>
-          </div>
-          <div class="history-info mt-5">
-            <div class="position-relative">
-              <img src="assets/images/bg.jpg" class="img-fluid img-curve video-popup-image" alt="video-popup">
-
-              <a href="#small-dialog" class="popup-with-zoom-anim play-view text-center position-absolute">
-                <span class="video-play-icon">
-                  <span class="fa fa-play"></span>
-                </span>
-              </a>
-              <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
-                <iframe src="https://www.youtube.com/embed/yRh7N-CluiM" allowfullscreen></iframe>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
+      </nav>
     </div>
-  </section>
-  <section class="w3l-index4">
-    <div class="new-block top-bottom">
-      <div class="container">
-        <div class="middle-section">
-          <div class="section-width">
-            <h2 style="font-size: 2.5em">PLAY 2 WIN (P2W)</h2>
-          </div>
-          <div class="link-list-menu">
-            <p class="mt-md-4 mt-3 mb-md-5 mb-4">Play In the Metaverse to stand a chance to win
-              &#8358;1,000,000 and <br>an Oculus Quest II VR Headset.
-            </p>
-            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; 
-            color: #fff; background: #ab07d4; border: none;">Download Now</a>
-          </div>
-        </div>
-      </div>
+  </header>
+  <!--/header-->
+  <!-- contact breadcrumbs -->
+  <nav id="breadcrumbs" class="breadcrumbs">
+    <div class="container page-wrapper">
+      <a href="index.html">Home</a> » <span class="breadcrumb_last" aria-current="page">Events</span>
     </div>
-  </section>
+  </nav>
+  <!-- /contact breadcrumbs -->
+  <main>
 
   </main>
   <footer>
@@ -220,10 +103,11 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px"/>
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and
+                ISLANDERS. The first multiplayer
                 virtual reality platform for creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
@@ -235,7 +119,8 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights reserved
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
+              reserved
             </p>
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
@@ -262,8 +147,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="about.html" class="btn btn-light theme-button" 
-            style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
             color: #fff; background: #ab07d4; border: none;">Download Now</a>
           </div>
         </div>
@@ -304,6 +188,7 @@
     </section>
     <!-- //footer -->
   </footer>
+
 
   <!-- jQuery JS -->
   <!-- <script src="assets/js/jquery-3.4.1.slim.min.js"></script> -->
@@ -379,7 +264,6 @@
           }
         }
       })
-      // $('#exampleModalCenter').show()
     })
   </script>
   <!-- //customers owlcarousel -->
@@ -444,6 +328,13 @@
     });
   </script>
 
+  <!-- stats number counter-->
+  <script src="assets/js/jquery.waypoints.min.js"></script>
+  <script src="assets/js/jquery.countup.js"></script>
+  <script>
+    $('.counter').countUp();
+  </script>
+  <!-- //stats number counter -->
   <!--/MENU-JS-->
   <script>
     $(window).on("scroll", function () {
@@ -473,18 +364,7 @@
   </script>
   <!--//MENU-JS-->
 
-  <!-- POPOVER -->
-
-  <!-- //POPOVER -->
-
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
-
-  <script>
-    $(document).ready(function () {
-      $('#exampleModalCenter').modal('show');
-    })
-  </script>
 </body>
-
 </html>
