--- a/p2w.html
+++ b/p2w.html
@@ -46,10 +46,10 @@
                             <a class="nav-link" href="about.html">About</a>
                         </li>
                         <li class="nav-item @@services-active">
-                            <a class="nav-link" href="services.html">Careers</a>
+                            <a class="nav-link" href="careers.html">Careers</a>
                         </li>
                         <li class="nav-item @@services-active">
-                            <a class="nav-link" href="services.html">Events</a>
+                            <a class="nav-link" href="careers.html">Events</a>
                         </li>
                         <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
                             <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
