--- a/support.html
+++ b/support.html
@@ -45,10 +45,10 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item @@services-active">
-              <a class="nav-link" href="services.html">Careers</a>
+              <a class="nav-link" href="careers.html">Careers</a>
             </li>
             <li class="nav-item @@services-active">
-              <a class="nav-link" href="services.html">Events</a>
+              <a class="nav-link" href="careers.html">Events</a>
             </li>
             <li class="nav-item ml-lg-3 ml-0 mt-lg-0 mt-3">
               <a class="btn btn-outline-primary theme-button" href="support.html">Download Now</a>
@@ -85,52 +85,62 @@
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>There are many passages but the majority?</h2>
-                    <p>Voluptates amet earum velit nobis aliquam
-                      laboriosam nihil debitis facere voluptatibus consectetur quae quasi fuga, ad corrupti libero omnis sapiente
-                      non assumenda, incidunt officiis eaque iste minima autem.</p>
+                    <h2>How to become a member? </h2>
+                    <p>PURCHASE A SHELL TOKEN.
+                      (A shell token is your membership proof).</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>Sed ut perspiciatis unde omnis?</h2>
-                    <p>Sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
-                      laboriosam nihil debitis animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
-                      voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                    <h2>How many shell tokens are available?</h2>
+                    <p>We will announce that soon. </p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>At vero eos iusto odio ducimus qui?</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
-                      laboriosam nihil quasi fuga, ad corrupti libero omnis sapiente
-                      non assumenda excepturi aperiam animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
-                      voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                    <h2>Who is an Islander? </h2>
+                    <p>An Islander is a new member of Boat Island.</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>We denounce with righteous?</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
-                      laboriosam nihil debitis facere voluptatibus consectetur quae quasi fuga, ad corrupti libero omnis sapiente
-                      non assumenda excepturi aperiam iste minima autem.</p>
+                    <h2>Who are BOATS?</h2>
+                    <p>BOATS are creators on BOAT ISLAND</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>perspiciatis unde omnis?</h2>
-                    <p>Sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
-                      laboriosam nihil debitis animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
-                      voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                    <h2>What are the benefits of subscribing and becoming a member? </h2>
+                    <p>As an Islander (member) you enjoy premium access to Boat Island's EXCLUSIVE CONTENTS, MERCHS,
+                      PRIVATE EVENTS, EXCLUSIVE GIVEAWAYS & other EXCITING PACKAGES.</p>
                   </li>
                   <li>
                     <input type="checkbox" checked="">
                     <i></i>
-                    <h2>At vero eos iusto odio ducimus qui?</h2>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptates amet earum velit nobis aliquam
-                      laboriosam nihil quasi fuga, ad corrupti libero omnis sapiente
-                      non assumenda excepturi aperiam animi vitae eos nisi laudantium. Tempore reiciendis ipsam culpa, qui
-                      voluptates eveniet, incidunt officiis eaque iste minima autem.</p>
+                    <h2>Will Token price continue going up? </h2>
+                    <p>Yes, as demand increases, price will continue to rise.</p>
+                  </li>
+                  <li>
+                    <input type="checkbox" checked="">
+                    <i></i>
+                    <h2>How can I play for 1 million naira?</h2>
+                    <p>By subscribing and purchasing a token.</p>
+                  </li>
+                  <li>
+                    <input type="checkbox" checked="">
+                    <i></i>
+                    <h2>Are shell tokens redeemable?</h2>
+                    <p>Yes. Tokens will be redeemable</p>
+                  </li>
+                  <li>
+                    <input type="checkbox" checked="">
+                    <i></i>
+                    <h2>How can I host an event on Boat Island metaverse?</h2>
+                    <p>By reaching out to us via email or on our socials.<br>
+                      For more enquiries & partnerships, kindly send us an email:<br>
+                      <a href='mailto:support@bivr.io'>support@bivr.io</a><br>
+                      <a href='mailto:boatIslandVR@gmail.com'>boatislandvr@gmail.com</a><br>
+                    </p>
                   </li>
                 </ul>
               </div>
@@ -155,14 +165,12 @@
               <div class="contact-form">
                 <div class="header-section mb-4 text-left">
                   <h3>Drop us a Message</h3>
-                  <p class="mt-2 mb-3"> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices
-                    turpis sodales quis. Integer sit amet mattis quam.</p>
+                  <p class="mt-2 mb-3">We love to hear from you, because we care so much about you.</p>
                 </div>
                 <form method="post" class="">
                   <div class="main-input">
                     <input type="text" name="firstname" placeholder="First Name" class="contact-input" required="" />
-                    <input type="text" name="lastname" placeholder="Last Name" class="contact-input"
-                      required="" />
+                    <input type="text" name="lastname" placeholder="Last Name" class="contact-input" required="" />
                     <input type="email" name="email" placeholder="Email Address" class="contact-input" />
                     <textarea class="contact-textarea contact-input" name="w3lMessage" placeholder="Enter your message"
                       required=""></textarea>
@@ -210,8 +218,8 @@
                 </div>
                 <div class="contact-details">
                   <h4>Mail Us for information:</h4>
-                  <p><a href="mailto:info@masterwork.com" class="email">info@masterwork.com</a></p>
-                  <p><a href="mailto:masterwork@support.com" class="email">masterwork@support.com</a></p>
+                  <p><a href="mailto:support@bivr.io" class="email">support@bivr.io</a></p>
+                  <p><a href="mailto:boatislandvr@gmail.com" class="email">boatislandvr@gmail.com</a></p>
                 </div>
               </div>
             </div>
@@ -234,7 +242,7 @@
                   <ul class="footer-gd-16">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About Us</a></li>
-                    <li><a href="services.html">Events</a></li>
+                    <li><a href="careers.html">Events</a></li>
                     <li><a href="#url">Support</a></li>
                     <li><a href="#url">Purchase Token</a></li>
                   </ul>
@@ -253,10 +261,11 @@
             <div class="col-lg-6 col-md-12 column pl-lg-5 column4 mt-lg-0 mt-5">
               <h3 style="display: inline-block"><img class="img-fluid" src="assets/images/logo.png" alt=""
                   style="height:25px" />
-                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px"/>
+                <img class="img-fluid" src="assets/images/logo-txt.png" alt="" style="height:25px" />
               </h3>
 
-              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and ISLANDERS. The first multiplayer
+              <p style="color: #ffffff !important"> Boat Island VR (BIVR), is a metaverse community for BOATS and
+                ISLANDERS. The first multiplayer
                 virtual reality platform for creators.
                 We are building a meta and virtual space where ISLANDERS (Fans) can visit, connect with each other and
                 enjoy
@@ -268,7 +277,8 @@
         </div>
         <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
           <div class="columns text-lg-left text-center">
-            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights reserved
+            <p title="Designed by Potter Inc&trade;" style="color: #ffffff">&copy; 2022 The Boat Island. All rights
+              reserved
             </p>
           </div>
           <div class="columns-2 mt-lg-0 mt-3">
@@ -295,8 +305,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
           <div class="modal-content">
             <img src="assets/images/bg.jpg" alt="P2W" />
-            <a href="about.html" class="btn btn-light theme-button" 
-            style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
+            <a href="about.html" class="btn btn-light theme-button" style="border-radius: 40px; position: absolute; bottom: 30px; left:30px;
             color: #fff; background: #ab07d4; border: none;">Download Now</a>
           </div>
         </div>
@@ -515,6 +524,8 @@
 
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
+  <!-- Direct download link -->
+  <!-- https://w3g3a5v6.ssl.hwcdn.net/upload2/game/1542935/5938445?GoogleAccessId=uploader@moonscript2.iam.gserviceaccount.com&Expires=1659114131&Signature=b9j3FxiCdFQtixkTUmC2vEBbtqlbF78lLCPqP6sw%2FaqdBQVavONBeDfe6%2Fm6uHYhHE%2ByIn2H2CJVR%2F9IPXjV8sirVy4E97W4gLi643W179jqP1wdzv49wQnipz74vAn2QMvS54NbRY1Wws4CZ7MbbyNNqVN1AlzUg8e4FughhPLvrGUN2gNkuGW3ftNRZ0DMnGW9XsHkTnJ7LY7OmHUrgjpfDYIVPF1r1Yyr%2FkeWvxvjDs%2FgZJtjdjl5wjxIsG7lIt7scV9xQ4oCEOEOv%2FYYtLVXpWE6FKM7yV2vKgiHcMSmeYXxJUxX1KBgpdkAzuyPcEjGzCe02aliHrpO44kpIg==&hwexp=1659114391&hwsig=4b7e655c6cd960b6ed88847b93cefa36 -->
 </body>
 
 </html>
