Designed Event page and Added Event photo

--- a/events.html
+++ b/events.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Contact Us - BIVR</title>
+  <title>Events &amp; Contests - BIVR</title>
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="assets/css/style-starter.css">
@@ -14,8 +14,9 @@
   <!-- web fonts -->
   <link href="//fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700;800;900&display=swap" rel="stylesheet">
 </head>
+
 <body>
-     <!--header-->
+  <!--header-->
   <header id="site-header" class="fixed-top">
     <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
@@ -69,7 +70,129 @@
   </nav>
   <!-- /contact breadcrumbs -->
   <main>
+    <section class="w3l-products py-5 mb-4" id="projects">
+      <div class="container py-lg-5">
+        <div class="header-section text-center mx-auto">
+          <h6 class="sub-title">Featuring</h6>
+          <h3>Events & Contests </h3>
+        </div>
+        <div class="row mt-5">
+          <div class="col-lg-10 mx-auto">
+            <div class="resp-tabs-container hor_1">
+              <h3 
+                style="color: var(--primary);
+                font-weight: 700;
+                line-height: 53.59px;">Ongoing Events</h3>
+              <div class="products-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/images/e1.png" class="img-fluid img-curve" alt="project image">
+                  </div>
+                  <div class="col-md-8 mt-md-0 mt-5">
+                    <h3>Play To Win (P2W)</h3>
+                    <p>
+                      Play to win IN THE METAVERSE FOR 1 million NAIRA AND A VR OCULUS QUEST 2 HEADSET. We are celebrating our launch and
+have decided to give out prizes to a  lucky winner</p>
+                    <a href="#url" class="btn btn-outline-primary theme-button mt-3">Go to Event</a>
+                  </div>
+                </div>
+              </div>
+              <hr>
+              <h3 
+                style="color: var(--primary);
+                font-weight: 700;
+                line-height: 53.59px;">Upcoming Events</h3>
+              <div class="products-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/images/b5.jpg" class="img-fluid img-curve" alt="project image">
+                  </div>
+                  <div class="col-md-8 mt-md-0 mt-5">
+                    <h3>Treasure Hunt</h3>
+                    <p>
+                      Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                      quibusdam
+                      repellendus. consequatur minus
+                      aliquam corrupti blanditiis, necessitatibus consectetur modi ipsum natus accusantium sit pariatur.
+                    </p>
+                    <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
+                  </div>
+                </div>
+              </div>
+              <div class="products-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/images/b5.jpg" class="img-fluid img-curve" alt="project image">
+                  </div>
+                  <div class="col-md-8 mt-md-0 mt-5">
+                    <h3>Treasure Hunt</h3>
+                    <p>
+                      Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                      quibusdam
+                      repellendus. consequatur minus
+                      aliquam corrupti blanditiis, necessitatibus consectetur modi ipsum natus accusantium sit pariatur.
+                    </p>
+                    <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
+                  </div>
+                </div>
+              </div>
+              <div class="products-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/images/b5.jpg" class="img-fluid img-curve" alt="project image">
+                  </div>
+                  <div class="col-md-8 mt-md-0 mt-5">
+                    <h3>Treasure Hunt</h3>
+                    <p>
+                      Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                      quibusdam
+                      repellendus. consequatur minus
+                      aliquam corrupti blanditiis, necessitatibus consectetur modi ipsum natus accusantium sit pariatur.
+                    </p>
+                    <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
+                  </div>
+                </div>
+              </div>
+              <div class="products-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/images/b5.jpg" class="img-fluid img-curve" alt="project image">
+                  </div>
+                  <div class="col-md-8 mt-md-0 mt-5">
+                    <h3>Treasure Hunt</h3>
+                    <p>
+                      Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                      quibusdam
+                      repellendus. consequatur minus
+                      aliquam corrupti blanditiis, necessitatibus consectetur modi ipsum natus accusantium sit pariatur.
+                    </p>
+                    <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
+                  </div>
+                </div>
+              </div>
+              <div class="products-content">
+                <div class="row">
+                  <div class="col-md-4">
+                    <img src="assets/images/b5.jpg" class="img-fluid img-curve" alt="project image">
+                  </div>
+                  <div class="col-md-8 mt-md-0 mt-5">
+                    <h3>Treasure Hunt</h3>
+                    <p>
+                      Lorem ipsum dolor sit, adipisicing elit repudiandae perferendis dolores praesentium nulla
+                      quibusdam
+                      repellendus. consequatur minus
+                      aliquam corrupti blanditiis, necessitatibus consectetur modi ipsum natus accusantium sit pariatur.
+                    </p>
+                    <a href="#url" class="btn btn-outline-primary theme-button mt-3">Coming Soon</a>
+                  </div>
+                </div>
+              </div>
+            </div>
 
+          </div>
+        </div>
+        </div>
+    </section>
   </main>
   <footer>
     <!-- footer -->
@@ -367,4 +490,5 @@
   <!--  Bootstrap JS -->
   <script src="assets/js/bootstrap.min.js"></script>
 </body>
+
 </html>
